# PolePositionCR-Server

./: CMakeLists.txt  README.md  cJSON.c  cJSON.h  client.c  constants.c  constants.h  main.c  main.h
functions/: game_functions.c  game_functions.h
server/: server.c  server.h  server_new.c  server_new.h
structures/: car_linked_list.c  car_linked_list.h  hole_linked_list.c  hole_linked_list.h  linkedlist.c  linkedlist.h  live_linked_list.c  live_linked_list.h  player_linked_list.c  player_linked_list.h  turbo_linked_list.c  turbo_linked_list.h
